Bug 481688.  Stop firing our DOMLink* events to content.  r+sr=smaug