content/html/content/src/nsHTMLLinkElement.cpp
@@ -270,11 +270,13 @@ nsHTMLLinkElement::CreateAndDispatchEvent(nsIDocument* aDoc,
                       strings, eIgnoreCase) != ATTR_VALUE_NO_MATCH)
     return;
 
-  nsRefPtr<nsPLDOMEvent> event = new nsPLDOMEvent(this, aEventName);
+  nsRefPtr<nsPLDOMEvent> event = new nsPLDOMEvent(this, aEventName, PR_TRUE);
   if (event) {
     // If we have script blockers on the stack then we want to run as soon as
     // they are removed. Otherwise punt the runable to the event loop as we
-    // don't know when it will be safe to run script.
+    // don't know when it will be safe to run script.  In particular, we might
+    // be in the middle of a pagehide right now, and firing this event at that
+    // point is not such a great idea.
     if (nsContentUtils::IsSafeToRunScript())
       event->PostDOMEvent();
     else
